--- a/styles.css
+++ b/styles.css
@@ -64,31 +64,33 @@ body {
     flex-wrap: wrap;
     justify-content: center;
     gap: 20px;
-   
+
 }
 
 .pricing-plan {
     background-color: #fff;
-    padding: 20px;
-    border-radius: 10px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
 }
 
 .pricing-plan h3 {
-    color: #333;
+    color: #fffefe;
     display: flex;
     align-items: center;
+    font-weight:900;
     justify-content: space-between;
+    margin-left: 40px;
+    margin-right: 40px;
 }
 
 .pricing-plan .price {
     margin-left: auto;
-    /* Moves the price to the right */
+    
 }
 
 .pricing-plan p {
     margin: 10px 0;
-    color: #666;
+    color: #FED62B;
+   
 }
 
 .pricing-plan ul {
@@ -96,10 +98,68 @@ body {
     padding: 0;
 }
 
-.pricing-plan ul li {
+.pricing-plan li, .pricing-plan h5 {
     margin-bottom: 10px;
+    margin-left: 40px;
 }
 
+.pick-up p{
+    font-size: 20px;
+    font-weight: 900;
+    padding-left: 10px;
+    color: white;
+    background-color: #21B0FD;
+}
+
+
+.image-section {
+    position: relative;
+}
+
+.jumbo{
+    width: 100%;
+}
+
+.image-text {
+    position: absolute;
+    top: 10%;
+    left: 20%;
+    transform: translateX(-50%);
+    width: 55%;
+    background-color: rgba(8, 9, 9, 0.7); /* Adjust the background color and opacity as needed */
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-weight: bold;
+    font-size: 60px; /* Adjust the font size as needed */
+    color: white;
+    text-shadow: 4px 4px 6px rgba(0, 0, 0, 0.7);
+    padding: 20px; /* Add padding for sleek appearance */
+    text-align: center; /* Center align text */
+}
+
+.highlight{
+    background-color: #080909;
+    border-left:  15px solid #FFDF2D;
+}
+.highlight2{
+    background-color: #080909;
+    border-left:  15px solid #FD318B;
+}
+.highlight3{
+    background-color: #080909;
+    border-left:  15px solid #21B0FD;
+}
+
+.small2{
+    color: #FD318B !important;
+    font-size: 12px;
+    margin-left: 20px !important;
+}
+
+.small3{
+    color: #21B0FD !important;
+    font-size: 12px;
+    margin-left: 20px !important;
+}
 
 /* Footer styles */
 footer {
@@ -127,7 +187,7 @@ footer {
 
 @media (min-width: 900px) {
     .grid-container {
-        grid-template-columns: repeat(3, 1fr);
+        grid-template-columns: repeat(4, 1fr);
         /* Display 3 columns for larger screens */
     }
 
