--- a/styles.css
+++ b/styles.css
@@ -4,17 +4,12 @@ body {
 
 /* Navbar styles */
 .navbar {
-    background-color: #080909;
+    background-color: #0D151F;
     color: #fff;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 10px 20px;
-}
-
-.logo {
-    font-size: 1.5rem;
-    font-weight: bold;
+    padding: 0px 40px;
 }
 
 .menu {
@@ -24,7 +19,8 @@ body {
 .menu-item {
     color: #fff;
     text-decoration: none;
-    margin-left: 20px;
+    margin-left: 30px;
+    font-family:Verdana, Geneva, Tahoma, sans-serif;
 }
 
 .menu-item:hover {
@@ -35,35 +31,32 @@ body {
 .grid-container {
     display: grid;
     grid-template-columns: repeat(1, 1fr);
-    /* Display 1 column for mobile */
-    gap: 5px;
-    min-height: calc(1vh - 100px);
-    /* Adjust the value to leave space for the footer */
-    margin-top: 30px;
-    margin-left: 10%;
-    margin-right: 10%;
+    gap: 2px;
+    min-height: calc(1px - 0px);
+    margin-top: 0px;
+    width: 100%;
+    background-color: #f6f6f6;
 }
 
 .grid-item {
-    width: 100%;
-    /* Ensure each grid item takes full width */
+    width: 95%;
+    margin-bottom: -8px;
+    margin-left: 2.5%;
 }
 
 .grid-item iframe {
     width: 100%;
-    height: 30vh;
 }
 
 .pricing-section.leaflet {
     padding: 30px 0;
-    margin: 50px;
+    margin: -10px 30px;
 }
 
 .leaflet-container {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    gap: 20px;
 
 }
 
@@ -76,7 +69,7 @@ body {
     color: #fffefe;
     display: flex;
     align-items: center;
-    font-weight:900;
+    font-weight: 900;
     justify-content: space-between;
     margin-left: 40px;
     margin-right: 40px;
@@ -84,13 +77,13 @@ body {
 
 .pricing-plan .price {
     margin-left: auto;
-    
+
 }
 
 .pricing-plan p {
     margin: 10px 0;
     color: #FED62B;
-   
+
 }
 
 .pricing-plan ul {
@@ -103,21 +96,17 @@ body {
     margin-left: 40px;
 }
 
-.pick-up p{
+.pick-up p {
     font-size: 20px;
     font-weight: 900;
     padding-left: 10px;
     color: white;
-    background-color: #21B0FD;
+    background-color: #080909;
 }
 
-
-.image-section {
-    position: relative;
-}
-
-.jumbo{
-    width: 100%;
+.jumbo {
+    width: 88%;
+    padding-left: 6%;
 }
 
 .image-text {
@@ -126,51 +115,134 @@ body {
     left: 20%;
     transform: translateX(-50%);
     width: 55%;
-    background-color: rgba(8, 9, 9, 0.7); /* Adjust the background color and opacity as needed */
+    background-color: rgba(8, 9, 9, 0.7);
+    /* Adjust the background color and opacity as needed */
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-weight: bold;
-    font-size: 60px; /* Adjust the font size as needed */
+    font-size: 60px;
+    /* Adjust the font size as needed */
     color: white;
     text-shadow: 4px 4px 6px rgba(0, 0, 0, 0.7);
-    padding: 20px; /* Add padding for sleek appearance */
-    text-align: center; /* Center align text */
+    padding: 20px;
+    /* Add padding for sleek appearance */
+    text-align: center;
+    /* Center align text */
 }
 
-.highlight{
+.highlight {
     background-color: #080909;
-    border-left:  15px solid #FFDF2D;
-}
-.highlight2{
-    background-color: #080909;
-    border-left:  15px solid #FD318B;
-}
-.highlight3{
-    background-color: #080909;
-    border-left:  15px solid #21B0FD;
+    border-left: 15px solid #FFDF2D;
 }
 
-.small2{
+.highlight2 {
+    background-color: #080909;
+    border-left: 15px solid #FD318B;
+}
+
+.highlight3 {
+    background-color: #080909;
+    border-left: 15px solid #21B0FD;
+}
+
+.small2 {
     color: #FD318B !important;
     font-size: 12px;
     margin-left: 20px !important;
 }
 
-.small3{
+.small3 {
     color: #21B0FD !important;
     font-size: 12px;
     margin-left: 20px !important;
 }
 
-/* Footer styles */
-footer {
-    background-color: #080909;
-    color: #fff;
-    padding-top: 50px;
-    padding-bottom: 50px;
-    text-align: center;
+.carousel {
+    position: relative;
     width: 100%;
-    bottom: 0;
+    overflow: hidden;
+  }
+  
+  .carousel-inner {
+    display: flex;
+    width: 100%; /* Ensure the container takes up the full width */
+    overflow-x: auto; /* Enable horizontal scrolling */
+    scroll-snap-type: x mandatory; /* Enable snap-scrolling */
 }
+
+.carousel iframe {
+    flex: 0 0 auto; /* Ensure each iframe takes up its natural width */
+    width: 100%; /* Ensure each iframe takes up the full width of its container */
+    height: 100vh;
+    scroll-snap-align: start; /* Align each iframe to the start of the container */
+}
+  
+  .carousel-prev,
+  .carousel-next {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    background: none;
+    border: none;
+    cursor: pointer;
+    font-size: 16px;
+    color: #FD318B;
+    background-color: #080909;
+    padding: 10px;
+  }
+  
+  .carousel-prev {
+    left: 0;
+  }
+  
+  .carousel-next {
+    right: 0;
+  }
+  
+
+
+footer {
+    background-color: #0D151F;
+    color: #fff;
+    padding: 20px 0;
+  }
+  
+  .footer-content {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 0 20px;
+  }
+  
+  .footer-logo img {
+    width: 100px;
+  }
+  
+  .footer-info p {
+    margin: 5px 0;
+  }
+  
+  .footer-social ul {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+  }
+  
+  .footer-social ul li {
+    display: inline-block;
+    margin-right: 10px;
+  }
+  
+  .footer-social ul li a {
+    color: #fff;
+    font-size: 18px;
+  }
+  
+  .footer-social ul li a:hover {
+    color: #ccc;
+  }
+  
 
 /* Media query for mobile view */
 @media (min-width: 500px) {
@@ -187,8 +259,7 @@ footer {
 
 @media (min-width: 900px) {
     .grid-container {
-        grid-template-columns: repeat(4, 1fr);
-        /* Display 3 columns for larger screens */
+        grid-template-columns: repeat(1, 1fr);
     }
 
     .title {
